env file updated

--- a/.env
+++ b/.env
@@ -1,1 +1,23 @@
 first_name="HI"
+last_name="Bye"
+ssn_itin="123456789"
+confirm_ssn="123456789"
+mobile_number="9876543210"
+street_address="street address name"
+apt_number="3rd"
+city_name="City Name"
+state_code="IL"
+zip_code="12345"
+email_id="test@test.com"
+dob_month="Jan"
+dob_day="22"
+dob_year="1990"
+id_type="U"
+id_number="123456"
+id_state="AL"
+bank_routing_number="123466"
+bank_account_number="123456"
+bank_name="Bank"
+income_source="military"
+payment_method="direct_deposit"
+monthly_income="10000"
