--- a/.env
+++ b/.env
@@ -17,7 +17,8 @@ id_number="123456"
 id_state="AL"
 bank_routing_number="123466"
 bank_account_number="123456"
-bank_name="Bank"
+bank_name="Bank name"
 income_source="military"
 payment_method="direct_deposit"
 monthly_income="10000"
+often_paid=
