--- a/.env
+++ b/.env
@@ -9,12 +9,15 @@ city_name="City Name"
 state_code="IL"
 zip_code="12345"
 email_id="test@test.com"
+dob=1/1/1990
 dob_month="Jan"
 dob_day="22"
 dob_year="1990"
 id_type="U"
 id_number="123456"
 id_state="AL"
+employer_name="Employer abc"
+employer_phone_number="9876543210"
 bank_routing_number="123466"
 bank_account_number="123456"
 bank_name="Bank name"
@@ -22,3 +25,5 @@ income_source="military"
 payment_method="direct_deposit"
 monthly_income="10000"
 often_paid=
+reference_name="John Doe"
+reference_phone_number="9876543210"
