Only selection left in part2

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@ city_name="City Name"
 state_code="IL"
 zip_code="12345"
 email_id="test@test.com"
-dob=1/1/1990
+dob=01/22/1990
 dob_month="Jan"
 dob_day="22"
 dob_year="1990"
@@ -24,6 +24,8 @@ bank_name="Bank name"
 income_source="military"
 payment_method="direct_deposit"
 monthly_income="10000"
+last_paid_amount="10000"
+next_pay_date="04/23/2021"
 often_paid=
 reference_name="John Doe"
 reference_phone_number="9876543210"
