test3 page 1 complete

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-first_name="HI"
-last_name="Bye"
-ssn_itin="123456789"
+first_name="Kunal"
+middle_name="Stay"
+last_name="Dey"
+ssn_itin="987654321"
 confirm_ssn="123456789"
 mobile_number="9876543210"
 street_address="street address name"
@@ -9,7 +10,7 @@ city_name="City Name"
 state_code="IL"
 zip_code="12345"
 email_id="test@test.com"
-dob=01/22/1990
+dob=11/11/1990
 dob_month="Jan"
 dob_day="22"
 dob_year="1990"
