--- a/.env
+++ b/.env
@@ -3,13 +3,13 @@ middle_name="Stay"
 last_name="Dey"
 ssn_itin="987654320"
 confirm_ssn="123456789"
-mobile_number="9555343210"
+mobile_number="2895140076"
 street_address="street address name"
 apt_number="3rd"
 city_name="City Name"
 state_code="IL"
 zip_code="12345"
-email_id="test12328@test.com"
+email_id="cibem14667@gmail.com"
 dob=11/11/1990
 dob_month="Jan"
 dob_day="22"
@@ -31,3 +31,5 @@ often_paid=
 reference_name="John Doe"
 reference_phone_number="9876543210"
 e_signature="E signature"
+rent_or_own="rent"
+years_lived_in_address="4"
