test 3 part 4 done

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 first_name="Kunal"
 middle_name="Stay"
 last_name="Dey"
-ssn_itin="987654320"
-confirm_ssn="123456789"
-mobile_number="2895140076"
+ssn_itin="987654256"
+confirm_ssn="123456786"
+mobile_number="2895140074"
 street_address="street address name"
 apt_number="3rd"
 city_name="City Name"
 state_code="IL"
 zip_code="12345"
-email_id="cibem14667@gmail.com"
+email_id="cibem1466642@gmail.com"
 dob=11/11/1990
 dob_month="Jan"
 dob_day="22"
@@ -26,10 +26,15 @@ income_source="military"
 payment_method="direct_deposit"
 monthly_income="10000"
 last_paid_amount="10000"
-next_pay_date="04/23/2021"
-often_paid=
+next_pay_date="04/12/2021"
+last_pay_date="03/20/2021"
+employment_start_date="12/2005"
+often_paid="3"
 reference_name="John Doe"
 reference_phone_number="9876543210"
 e_signature="E signature"
 rent_or_own="rent"
 years_lived_in_address="4"
+income_type="1"
+account_open_date="10/2008"
+1=full time, 2= part time, 3= self employed, 4=social security, 5=others
