card details added in test 3

--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
 first_name="Kunal"
 middle_name="Stay"
 last_name="Dey"
-ssn_itin="987654256"
-confirm_ssn="123456786"
-mobile_number="2895140074"
+ssn_itin="987654269"
+confirm_ssn="123456777"
+mobile_number="2895140011"
 street_address="street address name"
 apt_number="3rd"
 city_name="City Name"
 state_code="IL"
 zip_code="12345"
-email_id="cibem1466642@gmail.com"
+email_id="cibem14968142@gmail.com"
 dob=11/11/1990
 dob_month="Jan"
 dob_day="22"
@@ -19,8 +19,8 @@ id_number="123433"
 id_state="AL"
 employer_name="Employer abc"
 employer_phone_number="9876543210"
-bank_routing_number="123466"
-bank_account_number="123456"
+bank_routing_number="218104154"
+bank_account_number="82523359"
 bank_name="Bank name"
 income_source="military"
 payment_method="direct_deposit"
@@ -38,3 +38,6 @@ years_lived_in_address="4"
 income_type="1"
 account_open_date="10/2008"
 1=full time, 2= part time, 3= self employed, 4=social security, 5=others
+
+card_number="378282246310005"
+expiration_date="04/25"
