test 2 done upto banking

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ middle_name="Stay"
 last_name="Dey"
 ssn_itin="987654269"
 confirm_ssn="123456777"
-mobile_number="2895140011"
+mobile_number="5042010052"
 street_address="street address name"
 apt_number="3rd"
 city_name="City Name"
@@ -16,6 +16,7 @@ dob_day="22"
 dob_year="1990"
 id_type="U"
 id_number="123433"
+driver_license_number="123456"
 id_state="AL"
 employer_name="Employer abc"
 employer_phone_number="9876543210"
