test 2 done upto review

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ middle_name="Stay"
 last_name="Dey"
 ssn_itin="987654269"
 confirm_ssn="123456777"
-mobile_number="5042010052"
+mobile_number="2029674478"
 street_address="street address name"
 apt_number="3rd"
 city_name="City Name"
@@ -18,9 +18,13 @@ id_type="U"
 id_number="123433"
 driver_license_number="123456"
 id_state="AL"
+company_name="ABCD"
 employer_name="Employer abc"
 employer_phone_number="9876543210"
-bank_routing_number="218104154"
+job_title="Manager"
+years_worked="0"
+0=less than 1 otherwise the number of years worked, like 4 for 4 years and 5 for 5 years 10 for 10 years etc
+bank_routing_number="091000019"
 bank_account_number="82523359"
 bank_name="Bank name"
 income_source="military"
@@ -37,8 +41,9 @@ e_signature="E signature"
 rent_or_own="rent"
 years_lived_in_address="4"
 income_type="1"
+1=full time, 2= part time, 3= self employed, 4=social security or benefits, 5=others
 account_open_date="10/2008"
-1=full time, 2= part time, 3= self employed, 4=social security, 5=others
+
 
 card_number="378282246310005"
 expiration_date="04/25"
