--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start" : "concurrently \"node test.js\" \"node test1.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
