--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "concurrently \"node test.js\" \"node test1.js\" \"node test2.js\"",
+    "start": "concurrently \"node test.js\" \"node test1.js\" \"node test2.js\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "concurrently": "^6.2.0",
     "dotenv": "^8.2.0",
     "puppeteer": "^8.0.0"
   }
